[workspace]
[package]
version = "0.1.0"
name = "mtcs-sp1-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
mtcs-core = {path = "../core"}
rs_merkle = "1.4.2"
bincode = "1.3.3"
hex = "0.4.3"
serde_json = "1.0"
ed25519-consensus = "2.1.0"
rand = "0.8.5"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }
